// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`operations selectors  - contact 1`] = `
Immutable.Record {
  "lastSeen": "2019-03-07T13:03:48.000Z",
  "username": "Wenus",
  "address": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
  "messages": Immutable.List [
    Immutable.ReceivedMessage {
      "id": 0,
      "type": 1,
      "sender": Immutable.MessageSender {
        "replyTo": "",
        "username": "",
      },
      "createdAt": 1551963828,
      "message": "This is a message with id 0",
      "spent": "0.32",
      "isUnregistered": false,
      "tag": "",
      "offerOwner": "",
      "publicKey": null,
      "blockTime": 9007199254740991,
    },
    Immutable.ReceivedMessage {
      "id": 1,
      "type": 1,
      "sender": Immutable.MessageSender {
        "replyTo": "",
        "username": "",
      },
      "createdAt": 1551956628,
      "message": "This is a message with id 1",
      "spent": "0.32",
      "isUnregistered": false,
      "tag": "",
      "offerOwner": "",
      "publicKey": null,
      "blockTime": 9007199254740991,
    },
  ],
  "newMessages": Immutable.List [
    1,
    2,
    3,
    4,
  ],
  "vaultMessages": Immutable.List [
    Immutable.ReceivedMessage {
      "id": 0,
      "type": 1,
      "sender": Immutable.MessageSender {
        "replyTo": "",
        "username": "",
      },
      "createdAt": 1551963828,
      "message": "This is a message with id 0",
      "spent": "0.32",
      "isUnregistered": false,
      "tag": "",
      "offerOwner": "",
      "publicKey": null,
      "blockTime": 9007199254740991,
    },
    Immutable.ReceivedMessage {
      "id": 1,
      "type": 1,
      "sender": Immutable.MessageSender {
        "replyTo": "",
        "username": "",
      },
      "createdAt": 1551956628,
      "message": "This is a message with id 1",
      "spent": "0.32",
      "isUnregistered": false,
      "tag": "",
      "offerOwner": "",
      "publicKey": null,
      "blockTime": 9007199254740991,
    },
  ],
}
`;

exports[`operations selectors  - contacts 1`] = `
Immutable.Map {
  "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya": Immutable.Record {
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "username": "Wenus",
    "address": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    "messages": Immutable.List [
      Immutable.ReceivedMessage {
        "id": 0,
        "type": 1,
        "sender": Immutable.MessageSender {
          "replyTo": "",
          "username": "",
        },
        "createdAt": 1551963828,
        "message": "This is a message with id 0",
        "spent": "0.32",
        "isUnregistered": false,
        "tag": "",
        "offerOwner": "",
        "publicKey": null,
        "blockTime": 9007199254740991,
      },
      Immutable.ReceivedMessage {
        "id": 1,
        "type": 1,
        "sender": Immutable.MessageSender {
          "replyTo": "",
          "username": "",
        },
        "createdAt": 1551956628,
        "message": "This is a message with id 1",
        "spent": "0.32",
        "isUnregistered": false,
        "tag": "",
        "offerOwner": "",
        "publicKey": null,
        "blockTime": 9007199254740991,
      },
    ],
    "newMessages": Immutable.List [
      1,
      2,
      3,
      4,
    ],
    "vaultMessages": Immutable.List [
      Immutable.ReceivedMessage {
        "id": 0,
        "type": 1,
        "sender": Immutable.MessageSender {
          "replyTo": "",
          "username": "",
        },
        "createdAt": 1551963828,
        "message": "This is a message with id 0",
        "spent": "0.32",
        "isUnregistered": false,
        "tag": "",
        "offerOwner": "",
        "publicKey": null,
        "blockTime": 9007199254740991,
      },
      Immutable.ReceivedMessage {
        "id": 1,
        "type": 1,
        "sender": Immutable.MessageSender {
          "replyTo": "",
          "username": "",
        },
        "createdAt": 1551956628,
        "message": "This is a message with id 1",
        "spent": "0.32",
        "isUnregistered": false,
        "tag": "",
        "offerOwner": "",
        "publicKey": null,
        "blockTime": 9007199254740991,
      },
    ],
  },
  "zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq": Immutable.Record {
    "lastSeen": null,
    "username": "Mars",
    "address": "zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq",
    "messages": Immutable.List [],
    "newMessages": Immutable.List [],
    "vaultMessages": Immutable.List [],
  },
}
`;

exports[`operations selectors  - direct messages 1`] = `
Immutable.List [
  Immutable.DisplayableMessage {
    "id": "test-operation-id-3",
    "type": 1,
    "sender": Immutable.ExchangeParticipant {
      "replyTo": "",
      "username": "",
    },
    "receiver": Immutable.ExchangeParticipant {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      "username": "test-recipient-username",
    },
    "createdAt": 1551945828,
    "message": "This is some message test-message-id-3",
    "spent": "0",
    "fromYou": true,
    "status": "success",
    "error": null,
    "shippingData": null,
    "tag": "",
    "offerOwner": null,
    "isUnregistered": false,
    "publicKey": null,
    "blockTime": 9007199254740991,
  },
  Immutable.DisplayableMessage {
    "id": "test-operation-id-2",
    "type": 1,
    "sender": Immutable.ExchangeParticipant {
      "replyTo": "",
      "username": "",
    },
    "receiver": Immutable.ExchangeParticipant {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      "username": "test-recipient-username",
    },
    "createdAt": 1551953028,
    "message": "This is some message test-message-id-2",
    "spent": "0",
    "fromYou": true,
    "status": "success",
    "error": null,
    "shippingData": null,
    "tag": "",
    "offerOwner": null,
    "isUnregistered": false,
    "publicKey": null,
    "blockTime": 9007199254740991,
  },
  Immutable.DisplayableMessage {
    "id": 1,
    "type": 1,
    "sender": Immutable.ExchangeParticipant {
      "replyTo": "",
      "username": "",
    },
    "receiver": Immutable.ExchangeParticipant {
      "replyTo": "",
      "username": "",
    },
    "createdAt": 1551956628,
    "message": "This is a message with id 1
This is a message with id 1
This is some message test-pending-message",
    "spent": "0.32",
    "fromYou": true,
    "status": "pending",
    "error": null,
    "shippingData": null,
    "tag": "",
    "offerOwner": "",
    "isUnregistered": false,
    "publicKey": null,
    "blockTime": 9007199254740991,
  },
  Immutable.DisplayableMessage {
    "id": "test-operation-id",
    "type": 1,
    "sender": Immutable.ExchangeParticipant {
      "replyTo": "",
      "username": "",
    },
    "receiver": Immutable.ExchangeParticipant {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      "username": "test-recipient-username",
    },
    "createdAt": 1551960228,
    "message": "This is some message test-message-id",
    "spent": "0",
    "fromYou": true,
    "status": "success",
    "error": null,
    "shippingData": null,
    "tag": "",
    "offerOwner": null,
    "isUnregistered": false,
    "publicKey": null,
    "blockTime": 9007199254740991,
  },
  Immutable.DisplayableMessage {
    "id": 0,
    "type": 1,
    "sender": Immutable.ExchangeParticipant {
      "replyTo": "",
      "username": "",
    },
    "receiver": Immutable.ExchangeParticipant {
      "replyTo": "",
      "username": "",
    },
    "createdAt": 1551963828,
    "message": "This is a message with id 0
This is a message with id 0",
    "spent": "0.32",
    "fromYou": true,
    "status": "broadcasted",
    "error": null,
    "shippingData": null,
    "tag": "",
    "offerOwner": "",
    "isUnregistered": false,
    "publicKey": null,
    "blockTime": 9007199254740991,
  },
]
`;

exports[`operations selectors  - lastSeen 1`] = `"2019-03-07T13:03:48.000Z"`;

exports[`operations selectors  - messages 1`] = `
Immutable.List [
  Immutable.ReceivedMessage {
    "id": 0,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "",
      "username": "",
    },
    "createdAt": 1551963828,
    "message": "This is a message with id 0",
    "spent": "0.32",
    "isUnregistered": false,
    "tag": "",
    "offerOwner": "",
    "publicKey": null,
    "blockTime": 9007199254740991,
  },
  Immutable.ReceivedMessage {
    "id": 1,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "",
      "username": "",
    },
    "createdAt": 1551956628,
    "message": "This is a message with id 1",
    "spent": "0.32",
    "isUnregistered": false,
    "tag": "",
    "offerOwner": "",
    "publicKey": null,
    "blockTime": 9007199254740991,
  },
]
`;

exports[`operations selectors  - newMessages 1`] = `
Immutable.List [
  1,
  2,
  3,
  4,
]
`;

exports[`operations selectors  - pending messages 1`] = `
Immutable.Map {
  "test-operation-id": Immutable.Operation {
    "opId": "test-operation-id",
    "type": "pendingDirectMessage",
    "meta": Immutable.Record {
      "message": Immutable.Map {
        "id": "test-message-id",
        "type": 1,
        "createdAt": 1551960228,
        "message": "This is some message test-message-id",
        "signature": Object {
          "data": Array [
            202,
            15,
            119,
            117,
            178,
            163,
            37,
            253,
            154,
            252,
            231,
            166,
            195,
            137,
            183,
            234,
            71,
            243,
            80,
            122,
            59,
            238,
            222,
            166,
            186,
            69,
            90,
            160,
            160,
            50,
            104,
            190,
            10,
            207,
            36,
            153,
            83,
            108,
            75,
            44,
            43,
            251,
            163,
            248,
            121,
            50,
            116,
            127,
            154,
            101,
            218,
            181,
            222,
            56,
            194,
            169,
            79,
            74,
            219,
            181,
            87,
            23,
            91,
            207,
          ],
          "type": "Buffer",
        },
      },
      "recipientAddress": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      "recipientUsername": "test-recipient-username",
      "offerId": "",
    },
    "txId": "transaction-id",
    "error": null,
    "status": "success",
  },
  "test-operation-id-2": Immutable.Operation {
    "opId": "test-operation-id-2",
    "type": "pendingDirectMessage",
    "meta": Immutable.Record {
      "message": Immutable.Map {
        "id": "test-message-id-2",
        "type": 1,
        "createdAt": 1551953028,
        "message": "This is some message test-message-id-2",
        "signature": Object {
          "data": Array [
            93,
            229,
            160,
            223,
            47,
            10,
            65,
            174,
            71,
            112,
            184,
            230,
            247,
            84,
            67,
            130,
            157,
            4,
            33,
            195,
            30,
            65,
            144,
            47,
            131,
            90,
            154,
            213,
            24,
            180,
            246,
            234,
            127,
            112,
            70,
            23,
            253,
            17,
            207,
            91,
            184,
            206,
            3,
            81,
            254,
            9,
            112,
            222,
            134,
            123,
            230,
            112,
            178,
            116,
            203,
            168,
            175,
            240,
            4,
            241,
            69,
            17,
            27,
            101,
          ],
          "type": "Buffer",
        },
      },
      "recipientAddress": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      "recipientUsername": "test-recipient-username",
      "offerId": "",
    },
    "txId": "transaction-id-2",
    "error": null,
    "status": "success",
  },
  "test-operation-id-3": Immutable.Operation {
    "opId": "test-operation-id-3",
    "type": "pendingDirectMessage",
    "meta": Immutable.Record {
      "message": Immutable.Map {
        "id": "test-message-id-3",
        "type": 1,
        "createdAt": 1551945828,
        "message": "This is some message test-message-id-3",
        "signature": Object {
          "data": Array [
            239,
            184,
            201,
            81,
            172,
            7,
            154,
            148,
            230,
            112,
            241,
            11,
            130,
            31,
            77,
            124,
            79,
            31,
            73,
            239,
            138,
            184,
            107,
            171,
            230,
            45,
            49,
            68,
            107,
            110,
            89,
            216,
            62,
            27,
            132,
            250,
            112,
            76,
            34,
            1,
            215,
            116,
            57,
            162,
            94,
            114,
            218,
            56,
            166,
            48,
            45,
            91,
            225,
            213,
            151,
            95,
            17,
            38,
            129,
            187,
            248,
            87,
            234,
            10,
          ],
          "type": "Buffer",
        },
      },
      "recipientAddress": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      "recipientUsername": "test-recipient-username",
      "offerId": "",
    },
    "txId": "transaction-id-3",
    "error": null,
    "status": "success",
  },
}
`;

exports[`operations selectors  - queue messages 1`] = `
Immutable.Map {
  "messageHash": Immutable.PendingDirectMessage {
    "recipientAddress": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    "recipientUsername": "test-recipient-username",
    "offerId": "",
    "message": Immutable.Map {
      "id": "test-pending-message",
      "type": 1,
      "createdAt": 1551956628,
      "message": "This is some message test-pending-message",
      "signature": Object {
        "data": Array [
          125,
          48,
          0,
          208,
          24,
          4,
          145,
          148,
          20,
          58,
          51,
          195,
          92,
          109,
          173,
          90,
          216,
          205,
          238,
          114,
          236,
          220,
          98,
          151,
          54,
          136,
          21,
          232,
          114,
          84,
          38,
          225,
          12,
          47,
          69,
          14,
          21,
          122,
          217,
          230,
          156,
          174,
          99,
          112,
          233,
          199,
          79,
          156,
          18,
          29,
          223,
          61,
          38,
          174,
          58,
          169,
          170,
          87,
          77,
          246,
          158,
          219,
          15,
          48,
        ],
        "type": "Buffer",
      },
    },
  },
}
`;

exports[`operations selectors  - vault messages 1`] = `
Immutable.List [
  Immutable.ReceivedMessage {
    "id": 0,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "",
      "username": "",
    },
    "createdAt": 1551963828,
    "message": "This is a message with id 0",
    "spent": "0.32",
    "isUnregistered": false,
    "tag": "",
    "offerOwner": "",
    "publicKey": null,
    "blockTime": 9007199254740991,
  },
  Immutable.ReceivedMessage {
    "id": 1,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "",
      "username": "",
    },
    "createdAt": 1551956628,
    "message": "This is a message with id 1",
    "spent": "0.32",
    "isUnregistered": false,
    "tag": "",
    "offerOwner": "",
    "publicKey": null,
    "blockTime": 9007199254740991,
  },
]
`;
